# arknights-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: preset_config.json  speaker_aliases.json  word_dict.csv
scripts/: smoke_test.py
src/arknights_tts/: __init__.py  cache.py  concat.py  dict_loader.py  fetcher.py  main.py  parser.py  router.py  tts.py
tests/: test_parser.py
tests/fixtures/: sample_story.txt
